# Myntra

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  api.py  cli.py  config.py  main.py  models.py
app/scrapers/: __init__.py  category_scraper.py  delivery.py  parsers.py  product_scraper.py
app/services/: batch_service.py
app/utils/: csv_reader.py  logging.py  retry.py
data/: sample_output.json  sample_output_small.json
frontend/: app.js  index.html  styles.css
tests/: test_batch_service.py  test_category_parser.py  test_csv_reader.py  test_delivery.py  test_perf.py  test_product_parser.py
tests/fixtures/: category_page.html  product_page.html
